# localstack-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
localstack_dashboard/: asgi.py  docker-compose.yml  settings.py  urls.py  wsgi.py
localstack_dashboard/boto3_wrapper/: s3.py  session.py
localstack_dashboard/config/: parser.py
localstack_dashboard/core/: apps.py  context_processors.py  urls.py
localstack_dashboard/core/forms/: s3.py  settings.py
localstack_dashboard/core/mixins/: localstack_service_mixin.py
localstack_dashboard/core/views/: dashboard.py  s3.py  settings.py
localstack_dashboard/static/css/: localstack-dashboard.css  localstack-dashboard.min.css
localstack_dashboard/static/js/: localstack-dashboard.min.js
localstack_dashboard/templates/dashboard/: dashboard.html  dashboard_old.html  profile.html  settings.html
localstack_dashboard/templates/layouts/: base.html  footer.html  navbar.html  sidebar.html
localstack_dashboard/templates/services/: s3.html  s3_bucket_create_form.html  s3_bucket_delete_confirm.html
